5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1836_2603.log
== TEST (2019-07-01 21:32:53) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[1]
b=sorted(a,reverse=true)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:33:21) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[1]
b=sorted(a,reverse=True)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:34:51) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
print(a,b,c,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:34:57) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
print(a1,b1,c1,d1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:36:15) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[a1],[a2],[a3],[a4]])
print(a1,b1,c1,d1)
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:36:36) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[a1],[b1],[c1],[d1]])
print(a1,b1,c1,d1)
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:37:36) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
print(a1,b1,c1,d1)
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:28:54) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
print(a1,b1,c1,d1)
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:29:34) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
print(mz)
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:29:41) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
print(a1,b1,c1,d1)
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:29:43) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
print(a1,b1,c1,d1)
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:32:45) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
e=zeros((4,4))
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
print(mz)
for i in mz:
	for j in mz:
		e[i,j]
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:33:45) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
e=zeros((4,4))
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
print(mz)
for i in mz:
	for j in mz:
		e[i,j]=i,jmz[]
print(e)
-- ERROR:
File "XXXX", line 16
    e[i,j]=i,jmz[]
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:33:56) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
e=zeros((4,4))
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
print(mz)
for i in mz:
	for j in mz:
		e[i,j]=i,mz[i,j]
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:34:02) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
e=zeros((4,4))
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
print(mz)
for i in mz:
	for j in mz:
		e[i,j]=mz[i,j]
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:34:25) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
e=zeros((4,4))
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
print(mz)
for i in e:
	for j in e:
		e[i,j]=mz[i,j]
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:34:48) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
e=zeros((4,4))
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
print(mz,e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:42:54) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
print(mz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:45:16) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[a1],[b1],[c1],[d1]])
print(mz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:45:28) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[a1],[b1],[c1],[d1]])
print(mz.T)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:45:42) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[a1],[b1],[c1],[d1]])
print(mz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:47:07) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
print(mz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:48:19) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
for i in range(4):
	mz[i,:]=mz[4-i,:]
print(mz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:48:50) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
for i in range(4):
	mz[i,:]=mz[5-i,:]
print(mz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:49:10) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
for i in range(4):
	mz[i,:]=mz[-1,:]
print(mz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:49:31) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])
for i in range(4):
	mz[i,:]=mz[-1+i,:]
print(mz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:49:44) 
-- CODE:
from numpy import*
mt= array(eval(input("insira a matriz: ")))
a=mt[0]
b=mt[1]
c=mt[2]
d=mt[3]
a1=sorted(a,reverse=True)
b1=sorted(b,reverse=True)
c1=sorted(c,reverse=True)
d1=sorted(d,reverse=True)
mz=array([[d1],[c1],[b1],[a1]])

print(mz)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:53:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("insira a matriz: ")))

for i in range(4):
	a[:,i]=sorted(a[:,i],reverse=True)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:53:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("insira a matriz: ")))

for i in range(4):
	a[:,i]=sorted(a[:,i],reverse=True)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:53:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("insira a matriz: ")))

for i in range(4):
	a[:,i]=sorted(a[:,i],reverse=True)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:54:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("insira a matriz: ")))

for i in range(4):
	a[:,i]=sorted(a[:,i],reverse=True)
	print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 02:55:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("insira a matriz: ")))

for i in range(4):
	a[:,i]=sorted(a[:,i],reverse=True)
	print(i)
	print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 02:56:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("insira a matriz: ")))

for i in range(4):
	a[:,i]=sorted(a[:,i],reverse=True)
print(a)

-- EXECUTION TIME:
1.04473
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 02:56:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("insira a matriz: ")))

for i in range(4):
	a[:,i]=sorted(a[:,i],reverse=True)
print(a)

-- EXECUTION TIME:
0.999557
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
